@@ -2000,11 +2000,13 @@
   </module>
 
   <module id="vinagre">
+    <maintainer id="jwendell"/>
     <branch id="HEAD" stringfrozen="true"/>
     <branch id="gnome-2-22" stringfrozen="true"/>
   </module>
 
   <module id="vino">
+    <maintainer id="jwendell"/>
     <branch id="HEAD" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
     <branch id="gnome-2-18" stringfrozen="true"/>
