@@ -89,6 +89,16 @@
     <email>jrl@ids.org.au</email>
     <nick>doctau</nick>
   </person>
+  <person id="jwendell">
+    <name>Jonh Wendell</name>
+    <email>jwendell@gnome.org</email>
+    <nick>jwendell</nick>
+    <webpage>http://www.bani.com.br/</webpage>
+    <icon>http://planeta.br.gnome.org/heads/jwendell.png</icon>
+    <irc-nickname>jwendell</irc-nickname>
+    <bugzilla-account>wendell@bani.com.br</bugzilla-account>
+    <im id="Jabber">jonh.wendell@gmail.com</im>
+  </person>
   <person id="lucasr">
     <name>Lucas Rocha</name>
     <email>lucasr@gnome.org</email>
