@@ -1,3 +1,8 @@
+2008-09-05  Jonh Wendell  <jwendell@gnome.org>
+
+	* gnome-modules.xml.in: Added maintainer info for vino and vinagre.
+	* people.xml.in: Added myself.
+
 2008-09-05  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
